--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "bulma": "^0.6.1",
+    "mobx": "^3.3.2",
+    "mobx-react": "^4.3.5",
+    "prop-types": "^15.6.0",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "react-router-dom": "^4.2.2"
